# weather_bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  main.py  pre-start.sh  pyproject.toml  tasks.py
.github/workflows/: deploy.yml
client/: utils.py  weather.py
db/: mixins.py  queries.py  subscriber.py
migrations/: env.py
migrations/versions/: 7c407cf18869_added_subscriber_table.py
