[tool.poetry]
name = "weather-bot"
version = "0.1.0"
description = ""
authors = ["alexlinus <alexlinus93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytelegrambotapi = "^4.23.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
requests = "^2.32.3"
pytz = "^2024.2"
translate = "^3.6.1"
huey = "^2.5.2"
redis = "^5.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

